实验配置中心

--- a/doc/5. 项目规约.md
+++ b/doc/5. 项目规约.md
@@ -6,3 +6,24 @@
 
 restful风格的代码编写
 
+分支以 dev   sit  uat  pro
+环境   dev   sit  uat pro
+
+
+使用nacos的命名空间做环境拆分，方便权限控制  以group做类型分组
+业务模块以business作为group名称
+公共云组件以server作为group名称
+
+创建nacos的不同用户并做权限划分
+
+开发环境的账号密码为 dev:123456  
+测试环境的账号密码为 sit:123456  
+验收环境的账号密码为 uat:  
+生产环境的账号密码为 pro:  
+
+开发环境  dev
+测试环境  sit
+验收环境  uat
+生产环境  pro
+
+不同环境配置不同的用户，对权限做严格控制
