--- a/doc/5. 项目规约.md
+++ b/doc/5. 项目规约.md
@@ -1,5 +1,10 @@
 最受阿里巴巴所有开发规范
 
+端口
+server从7001开始
+service从8001开始
+entry从9001开始
+
 端口必须记录在相应文档
 
 分支以oneflow规范进行提交
@@ -10,9 +15,7 @@ restful风格的代码编写
 环境   dev   sit  uat pro
 
 
-使用nacos的命名空间做环境拆分，方便权限控制  以group做类型分组
-业务模块以business作为group名称
-公共云组件以server作为group名称
+使用nacos的命名空间做环境拆分，方便权限控制
 
 创建nacos的不同用户并做权限划分
 
@@ -27,3 +30,16 @@ restful风格的代码编写
 生产环境  pro
 
 不同环境配置不同的用户，对权限做严格控制
+
+
+配置管理
+
+不同环境的日志级别配置文件
+  监控配置文件  
+   Dubbo公共配置文件  
+    Discover公共配置文件 
+     添加config的重试次数   
+     通用的mysql配置文件   
+     Redis配置文件   
+     Mq配置文件 
+      es配置文件
