--- a/doc/5. 项目规约.md
+++ b/doc/5. 项目规约.md
@@ -1,5 +1,8 @@
 最受阿里巴巴所有开发规范
 
+
+使用restful风格
+
 端口
 server从7001开始
 service从8001开始
@@ -46,3 +49,5 @@ restful风格的代码编写
       
       
 dubbo服务提供者必须制定version  timeout  protocol参数
+
+无需组合的接口  可以直接返回DTO对象
