完成mybatisplus集成及demo编写

--- a/doc/5. 项目规约.md
+++ b/doc/5. 项目规约.md
@@ -48,6 +48,12 @@ restful风格的代码编写
       es配置文件
       
       
-dubbo服务提供者必须制定version  timeout  protocol参数
+dubbo服务提供者必须指定  timeout  protocol参数
 
 无需组合的接口  可以直接返回DTO对象
+
+
+聚合服务写在哪里？（开发常见QA List）
+写在主的功能模块中
+分页组件参数必须放在第一个
+dubbo调用不到？检查version
