--- a/doc/2.框架功能.md
+++ b/doc/2.框架功能.md
@@ -1,1 +1,14 @@
 参数实体校验
+添加dubbo的日志记录
+加入跨域配置支持
+切换druid连接池
+集成支付模块
+实验抛异常的数据库事物
+分页和基础库的结合
+异常码和基础库的结合
+接口访问速率限制注解
+添加分布式锁工具
+dubbo全部服务的问题
+dubbo集成swagger
+做一个全局的管理用户信息读取
+项目门户调度系统
