--- a/doc/5. 项目规约.md
+++ b/doc/5. 项目规约.md
@@ -1,4 +1,4 @@
-最受阿里巴巴所有开发规范
+遵守阿里巴巴所有开发规范
 
 数据库文件以时间戳进行命名，单位为妙
 使用restful风格
@@ -13,8 +13,6 @@ entry从9001开始
 端口必须记录在相应文档
 
 分支以oneflow规范进行提交
-
-restful风格的代码编写
 
 分支以 dev   sit  uat  pro
 环境   dev   sit  uat pro
@@ -34,8 +32,6 @@ restful风格的代码编写
 验收环境  uat
 生产环境  pro
 
-不同环境配置不同的用户，对权限做严格控制
-
 
 配置管理
 
@@ -52,10 +48,6 @@ restful风格的代码编写
       
 dubbo服务提供者必须指定  timeout  protocol参数
 
-无需组合的接口  可以直接返回DTO对象
+无需组合的接口  可以直接返回BO对象
 
 
-聚合服务写在哪里？（开发常见QA List）
-写在主的功能模块中
-分页组件参数必须放在第一个
-dubbo调用不到？检查version
