--- a/doc/6.项目模块.md
+++ b/doc/6.项目模块.md
@@ -2,4 +2,4 @@
 
 |        项目名        |                主页            |  端口 |             描述                  |
 |---------------------|-------------------------------|------|------------------------------------|
-|kimzing-consumer     | http://localhost:8001/info    | 8001 |                                    |
+|kimzing-user     | http://localhost:8001/   | 8001 |                                    |
