--- a/doc/1.设计目标.md
+++ b/doc/1.设计目标.md
@@ -1,33 +1,14 @@
 # 设计目标
 
 ### 1. 完善的工具集
-- 对象映射
-- Json转换
-- 日期时间操作
-- 加解密
-- Spring容器操作(属性/Bean获取)
-- 全局异常管理
-- 分页工具
-- 正则工具
-- 字符串、集合、Map等校验工具
 
-### 2. 调用协议
+### 2. 内部使用dubbo协议，对外统一提供http协议
 
-同时支持dubbo与http协议调用
+### 3. 服务异常能够向上传递并统一捕获包装
 
-### 3. 服务间调用异常传递
+### 4. 自动生成模板代码，生成即可运行
 
-同时支持dubbo与http协议调用时的异常传递
-
-### 4. 代码生成
-
-生成符合规范的模板代码
-
-### 5. 聚合网关
-
-网关层可直接负载到具体服务，同时可以对子接口做聚合
-统一封装返回结果体,包含具体时间戳
-
+### 5. 聚合网关负责协议转换及接口信息聚合，同时负责包装统一返回体(timestamp,code,message,data)
 
 ### 6. 具备线上调试功能
 
@@ -47,10 +28,6 @@
 
 ### 14. 具备自动化部署能力
 
-基于Docker打包构建，有相应的基础镜像
+### 15. 所有项目的配置由配置中心统一管理，公共的配置统一抽离
 
-### 15. 所有项目的配置有配置中心统一管理
-
-公共的配置可以统一抽离出来
-
-### 16. 分布式事务处理
+### 16. 支持分布式事务
