--- a/doc/3.框架选型.md
+++ b/doc/3.框架选型.md
@@ -6,7 +6,8 @@ SpringCloud + SpringCloud Alibaba
 
 ## 2. 服务调用
 
-Dubbo + OpenFeign
+内部服务：Dubbo
+外部服务：OpenFeign
 
 ## 3. 分布式事务
 
@@ -38,10 +39,8 @@ SpringCloud Gateway
 
 ## 10. 文档生成
 
-Swagger-Duboo  Swagger-Web
+Snife4J Swagger
 
 ## 11. 异常信息
 
 sentry
-
-## 12. 
