--- a/doc/2.框架功能.md
+++ b/doc/2.框架功能.md
@@ -1,3 +1,14 @@
+工具集
+- 对象映射
+- Json转换
+- 日期时间操作
+- 加解密
+- Spring容器操作(属性/Bean获取)
+- 全局异常管理
+- 分页工具
+- 正则工具
+- 字符串、集合、Map等校验工具
+
 参数实体校验
 添加dubbo的日志记录
 加入跨域配置支持
