抽取数据配置

--- a/doc/3.框架选型.md
+++ b/doc/3.框架选型.md
@@ -27,7 +27,7 @@ Spring
 
 ## 7. 数据持久化
 
-MyBatis Plus
+MyBatis Plus + Druid + Druid监控
 
 ## 8. 服务监控
 
@@ -43,4 +43,4 @@ Snife4J Swagger
 
 ## 11. 异常信息
 
-sentry
+ELK
